<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/stars_background"
    >


    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/steclo_extra_Light"
        android:text="Hello, \nWelcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ph_or_mail"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ph_or_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:fontFamily="@font/sfpro_regular"
        android:hint="@string/et_ph_or_email"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/white"
        android:paddingVertical="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_regular"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingVertical="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="35dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/light_black"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/or_sign_in"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/or_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/sfpro_medium"
        android:text="@string/or_sign_with"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/socials"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/socials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/socials"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        />


</androidx.constraintlayout.widget.ConstraintLayout>

